# rust-redmine

./: Cargo.toml
src/: get_client.rs  lib.rs  post_client.rs
src/client/: get_client.rs  mod.rs  post_client.rs
tests/: integratin_test.rs
