[package]
name = "rust-redmine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8.0"
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
# structopt = "0.3.22"
tokio = { version = "1.10.0", features = ["full"] }
